<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/appbackground">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".homeowner_interface">

        <TextView
            android:id="@+id/welcomeHO"
            android:layout_width="173dp"
            android:layout_height="60dp"
            android:layout_marginTop="32dp"
            android:autoText="false"
            android:gravity="center"
            android:text="@string/welcome"
            android:textSize="28dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/logOutBtn"
            android:layout_width="64dp"
            android:layout_height="57dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/roundbutton"
            android:text="@string/log_out"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/editProfileBtn"
            android:layout_width="64dp"
            android:layout_height="57dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/roundbutton"
            android:text="@string/edit_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/filter"
            android:layout_width="232dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="132dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:hint="Search for service"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ListView
            android:id="@+id/possibleServices"
            android:layout_width="match_parent"
            android:layout_height="207dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="192dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/listview_border"
            android:choiceMode="singleChoice"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ListView
            android:id="@+id/spListView"
            android:layout_width="0dp"
            android:layout_height="247dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/listview_border"
            android:choiceMode="singleChoice"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spSearch" />

        <EditText
            android:id="@+id/spSearch"
            android:layout_width="232dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:hint="Search service provider"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/findSPPrompt" />

        <TextView
            android:id="@+id/findSPPrompt"
            android:layout_width="260dp"
            android:layout_height="32dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="Tap on service to see service providers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/possibleServices" />

        <TextView
            android:id="@+id/ratingPrompt"
            android:layout_width="205dp"
            android:layout_height="25dp"
            android:layout_marginStart="90dp"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="89dp"
            android:layout_marginRight="89dp"
            android:gravity="center"
            android:text="Tap to rate a company"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spListView" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>