<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/appbackground"
    tools:context=".activity_service_provider_interface">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity_service_provider_interface">

        <Button
            android:id="@+id/spRemoveAvail"
            android:layout_width="125dp"
            android:layout_height="49dp"
            android:layout_marginStart="196dp"
            android:layout_marginLeft="196dp"
            android:layout_marginTop="736dp"
            android:layout_weight="1"
            android:background="@drawable/roundbutton"
            android:text="Remove Availability"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ListView
            android:id="@+id/yourServices"
            android:layout_width="0dp"
            android:layout_height="199dp"
            android:layout_marginStart="14dp"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@drawable/listview_border"
            android:choiceMode="multipleChoice"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <Button
            android:id="@+id/spRemoveServie"
            android:layout_width="125dp"
            android:layout_height="49dp"
            android:layout_marginStart="196dp"
            android:layout_marginLeft="196dp"
            android:layout_marginTop="404dp"
            android:layout_weight="1"
            android:background="@drawable/roundbutton"
            android:text="Remove Service"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/spEditAvailBtn"
            android:layout_width="125dp"
            android:layout_height="49dp"
            android:layout_marginTop="736dp"
            android:layout_marginEnd="200dp"
            android:layout_marginRight="200dp"
            android:layout_weight="1"
            android:background="@drawable/roundbutton"
            android:text="Add Availability"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/welcomeSP"
            android:layout_width="173dp"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/welcome"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/editProfileBtn"
            android:layout_width="64dp"
            android:layout_height="57dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/roundbutton"
            android:text="@string/edit_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/spEditServiceBtn"
            android:layout_width="125dp"
            android:layout_height="49dp"
            android:layout_marginTop="404dp"
            android:layout_marginEnd="200dp"
            android:layout_marginRight="200dp"
            android:background="@drawable/roundbutton"
            android:text="Add Service"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/logOutBtn"
            android:layout_width="64dp"
            android:layout_height="57dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/roundbutton"
            android:text="@string/log_out"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="152dp"
            android:layout_height="34dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="152dp"
            android:gravity="left"
            android:text="Your Services"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ListView
            android:id="@+id/avail"
            android:layout_width="0dp"
            android:layout_height="199dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/listview_border"
            android:choiceMode="multipleChoice"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="156dp"
            android:layout_height="37dp"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="480dp"
            android:gravity="left"
            android:text="Your Availability"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>
